# tvm_project_course

./: .gitignore  README.md  mnv2_auto_schedule.py  mnv2_meta_schedule.py
byoc/: README.md  alexnet_ncnn_codegen.py  custom_codegen.py  mnv2_ncnn_codegen.py  ncnn_codegen.py  onnx_ncnn_codegen.py  pytorch_ncnn_codegen.py  relay_offload_acl.py
byoc/tensorrt/: README.md
cmake/: README.md  config.cmake.dev
codegen/: ir_codegen.py  relay_codegen.py
cu_prog/00_print_index/: Makefile
cu_prog/00_print_index/src/: print_index.cu
cu_prog/config/: Makefile.config
docker/: Dockerfile.v0.12_cuda  README.md  config.cmake  run.sh  run_debug.sh
howto/extend_tvm/: how_to_use_tvm_pass_infra.py  writing_customized_tir_pass.py
miscellaneous/: cuda_cudnn_cutlass_benchmark.py  simple_pt_model.py
ncnn/: CMakeLists.txt  README.md  conv_high_low_level_demo.cpp  inner_product_low_level_demo.cpp
nsight/: benchmark.sh  run.sh
relay/: README.md  acl_rpc_call.py  relay_fold_constant.py  relay_list_ops.py  relay_parse.py  relay_simplify_inference.py
schedule/: README.md  mnv2_auto_schedule.py  mnv2_meta_schedule.py  mnv2_schedule.py  yolov8_auto_schedule.py  yolov8_onnx_export.py  yolov8_schedule.py
schedule/legacy/: yolov8_auto_schedule.py
stmt/: stmt_build.py
tir/: custom_tir_pass.py
tvmcon2023/: unity_pass_infra_and_byoc.ipynb  unity_pass_infra_and_byoc.py
